[package]
authors = ["Sungmann Cho <sungmann.cho@gmail.com>"]
description = "Breakpad for Rust"
documentation = "https://docs.rs/breakpad-rs"
edition = "2021"
license = "MIT"
name = "breakpad-rs"
readme = "README.md"
repository = "https://github.com/chosungmann/breakpad.rs"
version = "0.1.0"

[build-dependencies]
autocxx-build = "0.27.0"
autocxx-engine = "0.27.0"
miette = { version = "7.2.0", features = ["fancy"] }

[dependencies]
autocxx = "0.27.0"
cxx = "1.0.129"
